deployment/manifest/ingresses/lifesub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifesub-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # HTTPS로 리디렉션하지 않음
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://20.249.184.147"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: dg0316.20.249.186.119.nip.io
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: member
            port:
              number: 80
      - path: /api/mysub
        pathType: Prefix
        backend:
          service:
            name: mysub
            port:
              number: 80
      - path: /api/recommend
        pathType: Prefix
        backend:
          service:
            name: recommend
            port:
              number: 80
